--- a/css/index.css
+++ b/css/index.css
@@ -81,4 +81,17 @@ img {
 /* Utility classes */
 /* Buttons */
 .btn {
+  display: inline-block;
+  background: var(--primary-color);
+  color: #fff;
+  /* top and bottom 0.4, left and right 1.3 */
+  padding: 0.4rem 1.3rem;
+  font-size: 1 rem;
+  text-align: center;
+  border: none;
+  cursor: pointer;
+  margin-right: 0.5rem;
+  outline: none;
+  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.45);
+  border-radius: 2px;
 }
