--- a/css/index.css
+++ b/css/index.css
@@ -94,4 +94,29 @@ img {
   outline: none;
   box-shadow: 0 1px 0 rgba(0, 0, 0, 0.45);
   border-radius: 2px;
+  /* add curvature to button */
+  border-radius: 2px;
+}
+
+.btn:hover {
+  /* Gives the effect of slightly changing on hover */
+  opacity: 0.9;
+}
+
+.btn-rounded {
+  border-radius: 5px;
+}
+
+.btn-lg {
+  font-size: 1rem;
+  /* 0.8 rem top and bottom, 1.3 rem left and right */
+  padding: 0.8rem 1.3rem;
+  text-transform: uppercase;
+}
+
+.btn-xl {
+  font-size: 2rem;
+  /* 1.5 rem top and bottom, 2.1 rem left and right */
+  padding: 1.5rem 2.1rem;
+  text-transform: uppercase;
 }
