--- a/css/index.css
+++ b/css/index.css
@@ -53,8 +53,21 @@ img {
   background: url("../img/background.jpg") no-repeat center center/cover;
 }
 
+.showcase::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background: rgba(0, 0, 0, 0.6);
+  box-shadow: inset 120px 100px 250px #000000, inset -120px -100px 250px #000000;
+}
+
 .showcase-top {
   position: relative;
+  z-index: 2;
   height: 90px;
 }
 
@@ -68,6 +81,35 @@ img {
   left: 50%;
   /* to account for logo height and width, need this to make it truly centered */
   transform: translate(-50%, -50%);
+}
+
+.showcase-content {
+  position: relative;
+  margin: auto;
+  display: flex;
+  z-index: 2;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-top: 9rem;
+}
+
+.showcase-content p {
+  text-transform: uppercase;
+  color: #fff;
+  font-weight: 400;
+  font-size: 1.9rem;
+  line-height: 1.25;
+  margin: 0 0 2rem 0;
+}
+
+.showcase-content h1 {
+  font-weight: 700;
+  font-size: 5.2rem;
+  line-height: 1.1;
+  /* 2rem bottom, 0 everywhere else */
+  margin: 0 0 2rem 0;
 }
 
 /* place button over the netflix logo */
