--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 /* Declare root color variable */
 :root {
   --primary-color: #e50914;
+  --dark-color: #141414;
 }
 
 /* reset
@@ -121,6 +122,48 @@ img {
 }
 
 /* Utility classes */
+
+/* Tabs */
+.tabs {
+  background: var(--dark-color);
+  padding-top: 1rem;
+  border-bottom: 3px solid #3d3d3d;
+}
+
+/* css grid for the tabs */
+.tabs .container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 1rem;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.tabs p {
+  font-size: 1.2 rem;
+  padding-top: 0.5 rem;
+}
+
+/* for every div within both tabs and container classes apply these styles */
+.tabs .container > div {
+  padding: 1.5rem 0;
+}
+
+.tabs .container > div:hover {
+  color: #fff;
+  cursor: pointer;
+}
+
+/* container */
+.container {
+  max-width: 70%;
+  margin: auto;
+  overflow: hidden;
+  /* 0 top and bottom, 2 rem left and right */
+  padding: 0 2rem;
+}
+
 /* Buttons */
 .btn {
   display: inline-block;
