--- a/css/index.css
+++ b/css/index.css
@@ -210,6 +210,11 @@ img {
   margin-bottom: 1rem;
 }
 
+.text-md {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
 .text-center {
   text-align: center;
 }
